# qdrant-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/qdrant_mcp_server/: embedding.py  qdrant_client.py  server.py
src/qdrant_mcp_server/tools/: __init__.py  collection.py  point.py  text.py  vector.py
tests/: check_connection.py  conftest.py  run_tests.py  test_embedding.py  test_point_tools.py  test_text_tools.py  test_vector_tools.py
